[gd_scene load_steps=4 format=3 uid="uid://ko0tmskh3t6v"]

[ext_resource type="Script" uid="uid://bt6xn4f1iqusc" path="res://scripts/bridge.gd" id="1_itkp4"]
[ext_resource type="PackedScene" uid="uid://bkqyk14qxbjsd" path="res://scenes/bridge_piece.tscn" id="2_mp65f"]
[ext_resource type="Texture2D" uid="uid://dbolep4yymu6j" path="res://sprites/light-basic.png" id="3_dyp1r"]

[node name="BridgeContainer" type="Node2D"]
script = ExtResource("1_itkp4")
bridge_piece_prefab = ExtResource("2_mp65f")

[node name="StartPoint" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(-170, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_dyp1r")

[node name="EndPoint" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(170, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_dyp1r")

[node name="BridgePiecesContainer" type="Node2D" parent="."]
position = Vector2(-7, 0)
